Fix Swagger
